--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-sass": "^4.8.3",
     "sass-loader": "^6.0.6",
     "sass-module-importer": "^1.4.0",
+    "sass-resources-loader": "^1.3.3",
     "vue-template-compiler": "2.5.13",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
